Update Catalan translation

--- a/po/ca.po
+++ b/po/ca.po
@@ -10,7 +10,7 @@ msgstr ""
 "Report-Msgid-Bugs-To: https://gitlab.gnome.org/chergert/gnome-text-editor/"
 "issues\n"
 "POT-Creation-Date: 2025-02-28 11:22+0000\n"
-"PO-Revision-Date: 2025-03-02 10:40+0100\n"
+"PO-Revision-Date: 2025-08-10 10:40+0100\n"
 "Last-Translator: Francesc Busquets <francesc@gmail.com>\n"
 "Language-Team: Catalan <gnome@llistes.softcatala.org>\n"
 "Language: ca\n"
@@ -53,7 +53,7 @@ msgstr ""
 
 #: data/org.gnome.TextEditor.gschema.xml:16
 msgid "Auto Save Delay"
-msgstr "Retard de l'estalvi automàtic"
+msgstr "Retard del desat automàtic"
 
 #: data/org.gnome.TextEditor.gschema.xml:17
 msgid "The delay in seconds to wait before auto-saving a draft."
@@ -312,7 +312,7 @@ msgstr "El projecte GNOME"
 msgid "translator-credits"
 msgstr ""
 "Jordi Mas i Hernàndez <jmas@softcatala.org>, 2021-2025\n"
-"Francesc Busquets<francesc@gmail.com>, 2025"
+"Francesc Busquets <francesc@gmail.com>, 2025"
 
 #: src/editor-application-actions.c:347
 msgid "Clear File History?"
@@ -902,7 +902,7 @@ msgstr "Apropa"
 
 #: src/editor-window.c:411
 msgid "Zoom Out"
-msgstr "Redueix"
+msgstr "Allunya"
 
 #: src/editor-window.c:414
 msgid "Zoom out"
@@ -1109,7 +1109,7 @@ msgstr "Tanca el document"
 #: src/help-overlay.ui:127
 msgctxt "shortcut window"
 msgid "Open document properties"
-msgstr "Propietats del document"
+msgstr "Obre les propietats del document"
 
 #: src/help-overlay.ui:135
 msgctxt "shortcut window"
@@ -1311,150 +1311,6 @@ msgctxt "shortcut window"
 msgid "Toggle text wrapping"
 msgstr "Commuta l'ajustament del text"
 
-#~ msgid "2"
-#~ msgstr "2"
-
-#~ msgid "4"
-#~ msgstr "4"
-
-#~ msgid "6"
-#~ msgstr "6"
-
-#~ msgid "8"
-#~ msgstr "8"
-
-#~ msgid "Search document types"
-#~ msgstr "Cerca tipus de documents"
-
-#~ msgid "Save As"
-#~ msgstr "Anomena i desa"
-
-#~ msgid "Save"
-#~ msgstr "Desa"
-
-#~ msgid "Cancel"
-#~ msgstr "Cancel·la"
-
 msgid "Indentation"
 msgstr "Sagnat"
 
-#~ msgid "Use Tab Size"
-#~ msgstr "Utilitza la mida del tabulador"
-
-#~ msgid "Right Margin"
-#~ msgstr "Marge dret"
-
-#~ msgid "Properties"
-#~ msgstr "Propietats"
-
-#~ msgid "Name"
-#~ msgstr "Nom"
-
-#~ msgid "Save changes for this document"
-#~ msgstr "Desa els canvis d'aquest document"
-
-#~ msgid "Find"
-#~ msgstr "Cerca"
-
-#~ msgid "Automatically Detected"
-#~ msgstr "Detectat automàticament"
-
-#~ msgid "Line Ending:"
-#~ msgstr "Final de línia:"
-
-#~ msgid "Open File"
-#~ msgstr "Obre un fitxer"
-
-#~ msgid "Open"
-#~ msgstr "Obre"
-
-#, c-format
-#~ msgid "Document Type: %s"
-#~ msgstr "Tipus de document: %s"
-
-#~ msgid "New tab"
-#~ msgstr "Pestanya nova"
-
-#~ msgid "View Options"
-#~ msgstr "Opcions de visualització"
-
-#~ msgid "View"
-#~ msgstr "Visualitza"
-
-#~ msgid "Main menu"
-#~ msgstr "Menú principal"
-
-#~ msgid "Start or Open a Document"
-#~ msgstr "Inicia o obre un document"
-
-#~ msgid ""
-#~ "• Press the Open button\n"
-#~ "• Press the New tab button\n"
-#~ "• Press Ctrl+N to start a new document\n"
-#~ "• Press Ctrl+O to browse for a document\n"
-#~ "\n"
-#~ "Or, press Ctrl+W to close the window."
-#~ msgstr ""
-#~ "• Premeu el botó obre\n"
-#~ "• Premeu el botó pestanya nova\n"
-#~ "• Premeu Ctrl+N per a començar un document nou\n"
-#~ "• Premeu Ctrl+O per a navegar per un document\n"
-#~ "\n"
-#~ "O bé, premeu Ctrl+W per a tancar la finestra."
-
-#~ msgid "_Help"
-#~ msgstr "_Ajuda"
-
-#~ msgid "_2"
-#~ msgstr "_2"
-
-#~ msgid "_4"
-#~ msgstr "_4"
-
-#~ msgid "_6"
-#~ msgstr "_6"
-
-#~ msgid "_8"
-#~ msgstr "_8"
-
-#~ msgid "T_ext Wrapping"
-#~ msgstr "_Ajustament del text"
-
-#~ msgid "Chec_k Spelling"
-#~ msgstr "C_omprova l'ortografia"
-
-#~ msgid "_Document Type…"
-#~ msgstr "Tipus de _document…"
-
-#~ msgid "You do not have permission to open the file."
-#~ msgstr "No teniu permís per a obrir el fitxer."
-
-#~ msgid "No Matches"
-#~ msgstr "Sense coincidències"
-
-#~ msgid "Add to Dictionary"
-#~ msgstr "Afegeix al diccionari"
-
-#~ msgid "Ignore"
-#~ msgstr "Ignora"
-
-#~ msgid "Languages"
-#~ msgstr "Idiomes"
-
-#~ msgid "Enchant 2"
-#~ msgstr "Enchant 2"
-
-#~ msgid "Select Font"
-#~ msgstr "Selecciona el tipus de lletra"
-
-#~ msgid "Open New Document (Ctrl+O)"
-#~ msgstr "Obre un document nou (Ctrl+O)"
-
-#~ msgid "Move to previous match (Ctrl+Shift+G)"
-#~ msgstr "Mou a la coincidència anterior (Ctrl+Maj+G)"
-
-#~ msgid "Move to next match (Ctrl+G)"
-#~ msgstr "Mou a la coincidència següent (Ctrl+G)"
-
-#~ msgid "Toggle search options"
-#~ msgstr "Commuta les opcions de cerca"
