--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,10 @@
+# Text Editor 49.rc
+
+ * Performance improvements to the open popover
+ * Use new shortcuts dialog from libadwaita
+ * Drop direct use of Cairo
+ * Translation updates
+
 # Text Editor 49.alpha
 
  * Improve document filtering for search
