--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,8 @@
+# Text Editor 49.0
+
+ * Fix modal state when showing font dialog
+ * Build/CI updates
+
 # Text Editor 49.rc
 
  * Performance improvements to the open popover
