--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,11 @@
+# Text Editor 49.1
+
+ * Fix buffer invalidation when language changes
+ * Fix UTF-8 handling in basename property getters
+ * Improve dark theme styling to better match libadwaita
+ * Build/CI updates
+ * Translation updates
+
 # Text Editor 49.0
 
  * Fix modal state when showing font dialog
